--- a/mkb_sizes.ipynb
+++ b/mkb_sizes.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "id": "ba966a9b",
    "metadata": {},
    "outputs": [
@@ -226,7 +226,7 @@
        "U             25            65             35               5"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "id": "c4456992",
    "metadata": {},
    "outputs": [
@@ -447,7 +447,7 @@
        "Business Economy (B-N, excl. K)                   9530  1585805  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -494,6 +494,14 @@
     "\n",
     "combined_df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "32b59e47-ef47-419f-9ab3-cc1e1b2de2fe",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -546,7 +554,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -560,7 +568,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.13"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
