--- a/mkb_sizes.ipynb
+++ b/mkb_sizes.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "id": "ba966a9b",
    "metadata": {},
    "outputs": [
@@ -36,8 +36,8 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Total</th>\n",
-       "      <th>Bedrijfsgrootte|1 werkzaam persoon</th>\n",
-       "      <th>Bedrijfsgrootte|2 tot 10 werkzame personen</th>\n",
+       "      <th>1 worker</th>\n",
+       "      <th>2-10 workers</th>\n",
        "      <th>10-50 workers</th>\n",
        "      <th>50-250 workers</th>\n",
        "    </tr>\n",
@@ -280,98 +280,36 @@
        "</div>"
       ],
       "text/plain": [
-       "                                            Total  \\\n",
-       "Sector                                              \n",
-       "A-U Alle economische activiteiten         2392455   \n",
-       "Business Economy, B-N, excl. K, incl. 95  1630865   \n",
-       "A Landbouw, bosbouw en visserij             78235   \n",
-       "B-E Nijverheid (geen bouw) en energie       91615   \n",
-       "B Delfstoffenwinning                          645   \n",
-       "C Industrie                                 86720   \n",
-       "D Energievoorziening                         2205   \n",
-       "E Waterbedrijven en afvalbeheer              2045   \n",
-       "F Bouwnijverheid                           270790   \n",
-       "G-I Handel, vervoer en horeca              446310   \n",
-       "G Handel                                   295740   \n",
-       "H Vervoer en opslag                         68945   \n",
-       "I Horeca                                    81625   \n",
-       "J Informatie en communicatie               132900   \n",
-       "K Financiële dienstverlening                35750   \n",
-       "L Verhuur en handel van onroerend goed      39400   \n",
-       "M-N Zakelijke dienstverlening              640125   \n",
-       "M Specialistische zakelijke diensten       505770   \n",
-       "N Verhuur en overige zakelijke diensten    134355   \n",
-       "O-Q Overheid en zorg                       379855   \n",
-       "O Openbaar bestuur en overheidsdiensten       920   \n",
-       "P Onderwijs                                141800   \n",
-       "Q Gezondheids- en welzijnszorg             237140   \n",
-       "R-U Cultuur, recreatie, overige diensten   277475   \n",
-       "R Cultuur, sport en recreatie              141335   \n",
-       "S Overige dienstverlening                  135980   \n",
-       "T Huishoudens                                  25   \n",
-       "U Extraterritoriale organisaties              135   \n",
-       "\n",
-       "                                          Bedrijfsgrootte|1 werkzaam persoon  \\\n",
-       "Sector                                                                         \n",
-       "A-U Alle economische activiteiten                                    1965125   \n",
-       "Business Economy, B-N, excl. K, incl. 95                             1317745   \n",
-       "A Landbouw, bosbouw en visserij                                        40715   \n",
-       "B-E Nijverheid (geen bouw) en energie                                  65650   \n",
-       "B Delfstoffenwinning                                                     505   \n",
-       "C Industrie                                                            61975   \n",
-       "D Energievoorziening                                                    1800   \n",
-       "E Waterbedrijven en afvalbeheer                                         1375   \n",
-       "F Bouwnijverheid                                                      234820   \n",
-       "G-I Handel, vervoer en horeca                                         299380   \n",
-       "G Handel                                                              201125   \n",
-       "H Vervoer en opslag                                                    53460   \n",
-       "I Horeca                                                               44795   \n",
-       "J Informatie en communicatie                                          114255   \n",
-       "K Financiële dienstverlening                                           29240   \n",
-       "L Verhuur en handel van onroerend goed                                 30605   \n",
-       "M-N Zakelijke dienstverlening                                         565010   \n",
-       "M Specialistische zakelijke diensten                                  455230   \n",
-       "N Verhuur en overige zakelijke diensten                               109780   \n",
-       "O-Q Overheid en zorg                                                  337875   \n",
-       "O Openbaar bestuur en overheidsdiensten                                  325   \n",
-       "P Onderwijs                                                           130760   \n",
-       "Q Gezondheids- en welzijnszorg                                        206795   \n",
-       "R-U Cultuur, recreatie, overige diensten                              247575   \n",
-       "R Cultuur, sport en recreatie                                         127700   \n",
-       "S Overige dienstverlening                                             119830   \n",
-       "T Huishoudens                                                             20   \n",
-       "U Extraterritoriale organisaties                                          25   \n",
-       "\n",
-       "                                          Bedrijfsgrootte|2 tot 10 werkzame personen  \\\n",
-       "Sector                                                                                 \n",
-       "A-U Alle economische activiteiten                                             354805   \n",
-       "Business Economy, B-N, excl. K, incl. 95                                      256120   \n",
-       "A Landbouw, bosbouw en visserij                                                35520   \n",
-       "B-E Nijverheid (geen bouw) en energie                                          17135   \n",
-       "B Delfstoffenwinning                                                              65   \n",
-       "C Industrie                                                                    16420   \n",
-       "D Energievoorziening                                                             275   \n",
-       "E Waterbedrijven en afvalbeheer                                                  375   \n",
-       "F Bouwnijverheid                                                               30445   \n",
-       "G-I Handel, vervoer en horeca                                                 121860   \n",
-       "G Handel                                                                       80125   \n",
-       "H Vervoer en opslag                                                            11935   \n",
-       "I Horeca                                                                       29800   \n",
-       "J Informatie en communicatie                                                   14685   \n",
-       "K Financiële dienstverlening                                                    5395   \n",
-       "L Verhuur en handel van onroerend goed                                          8080   \n",
-       "M-N Zakelijke dienstverlening                                                  62295   \n",
-       "M Specialistische zakelijke diensten                                           43310   \n",
-       "N Verhuur en overige zakelijke diensten                                        18980   \n",
-       "O-Q Overheid en zorg                                                           32765   \n",
-       "O Openbaar bestuur en overheidsdiensten                                           35   \n",
-       "P Onderwijs                                                                     9075   \n",
-       "Q Gezondheids- en welzijnszorg                                                 23655   \n",
-       "R-U Cultuur, recreatie, overige diensten                                       26635   \n",
-       "R Cultuur, sport en recreatie                                                  11875   \n",
-       "S Overige dienstverlening                                                      14680   \n",
-       "T Huishoudens                                                                      5   \n",
-       "U Extraterritoriale organisaties                                                  75   \n",
+       "                                            Total  1 worker  2-10 workers  \\\n",
+       "Sector                                                                      \n",
+       "A-U Alle economische activiteiten         2392455   1965125        354805   \n",
+       "Business Economy, B-N, excl. K, incl. 95  1630865   1317745        256120   \n",
+       "A Landbouw, bosbouw en visserij             78235     40715         35520   \n",
+       "B-E Nijverheid (geen bouw) en energie       91615     65650         17135   \n",
+       "B Delfstoffenwinning                          645       505            65   \n",
+       "C Industrie                                 86720     61975         16420   \n",
+       "D Energievoorziening                         2205      1800           275   \n",
+       "E Waterbedrijven en afvalbeheer              2045      1375           375   \n",
+       "F Bouwnijverheid                           270790    234820         30445   \n",
+       "G-I Handel, vervoer en horeca              446310    299380        121860   \n",
+       "G Handel                                   295740    201125         80125   \n",
+       "H Vervoer en opslag                         68945     53460         11935   \n",
+       "I Horeca                                    81625     44795         29800   \n",
+       "J Informatie en communicatie               132900    114255         14685   \n",
+       "K Financiële dienstverlening                35750     29240          5395   \n",
+       "L Verhuur en handel van onroerend goed      39400     30605          8080   \n",
+       "M-N Zakelijke dienstverlening              640125    565010         62295   \n",
+       "M Specialistische zakelijke diensten       505770    455230         43310   \n",
+       "N Verhuur en overige zakelijke diensten    134355    109780         18980   \n",
+       "O-Q Overheid en zorg                       379855    337875         32765   \n",
+       "O Openbaar bestuur en overheidsdiensten       920       325            35   \n",
+       "P Onderwijs                                141800    130760          9075   \n",
+       "Q Gezondheids- en welzijnszorg             237140    206795         23655   \n",
+       "R-U Cultuur, recreatie, overige diensten   277475    247575         26635   \n",
+       "R Cultuur, sport en recreatie              141335    127700         11875   \n",
+       "S Overige dienstverlening                  135980    119830         14680   \n",
+       "T Huishoudens                                  25        20             5   \n",
+       "U Extraterritoriale organisaties              135        25            75   \n",
        "\n",
        "                                          10-50 workers  50-250 workers  \n",
        "Sector                                                                   \n",
@@ -405,7 +343,7 @@
        "U Extraterritoriale organisaties                     30               5  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,8 +359,8 @@
     "df = df.rename(columns={\n",
     "    'Unnamed: 0' : 'Sector',\n",
     "    'Totaal bedrijven' : 'Total',\n",
-    "    'Bedrijfsgrootte|1 werkzaam persoon\t': '1 worker',\n",
-    "    'Bedrijfsgrootte|2 tot 10 werkzame personen\t': '2-10 workers',\n",
+    "    'Bedrijfsgrootte|1 werkzaam persoon': '1 worker',\n",
+    "    'Bedrijfsgrootte|2 tot 10 werkzame personen': '2-10 workers',\n",
     "    'Bedrijfsgrootte|10 tot 50 werkzame personen': '10-50 workers',\n",
     "    'Bedrijfsgrootte|50 tot 250 werkzame personen': '50-250 workers'\n",
     "})\n",
@@ -435,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "32b59e47-ef47-419f-9ab3-cc1e1b2de2fe",
    "metadata": {},
    "outputs": [
@@ -461,8 +399,8 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Total</th>\n",
-       "      <th>Bedrijfsgrootte|1 werkzaam persoon</th>\n",
-       "      <th>Bedrijfsgrootte|2 tot 10 werkzame personen</th>\n",
+       "      <th>1 worker</th>\n",
+       "      <th>2-10 workers</th>\n",
        "      <th>10-50 workers</th>\n",
        "      <th>50-250 workers</th>\n",
        "    </tr>\n",
@@ -537,35 +475,15 @@
        "</div>"
       ],
       "text/plain": [
-       "                                            Total  \\\n",
-       "Sector                                              \n",
-       "Business Economy, B-N, excl. K, incl. 95  1630865   \n",
-       "B-E Nijverheid (geen bouw) en energie       91615   \n",
-       "F Bouwnijverheid                           270790   \n",
-       "G-I Handel, vervoer en horeca              446310   \n",
-       "J Informatie en communicatie               132900   \n",
-       "L Verhuur en handel van onroerend goed      39400   \n",
-       "M-N Zakelijke dienstverlening              640125   \n",
-       "\n",
-       "                                          Bedrijfsgrootte|1 werkzaam persoon  \\\n",
-       "Sector                                                                         \n",
-       "Business Economy, B-N, excl. K, incl. 95                             1317745   \n",
-       "B-E Nijverheid (geen bouw) en energie                                  65650   \n",
-       "F Bouwnijverheid                                                      234820   \n",
-       "G-I Handel, vervoer en horeca                                         299380   \n",
-       "J Informatie en communicatie                                          114255   \n",
-       "L Verhuur en handel van onroerend goed                                 30605   \n",
-       "M-N Zakelijke dienstverlening                                         565010   \n",
-       "\n",
-       "                                          Bedrijfsgrootte|2 tot 10 werkzame personen  \\\n",
-       "Sector                                                                                 \n",
-       "Business Economy, B-N, excl. K, incl. 95                                      256120   \n",
-       "B-E Nijverheid (geen bouw) en energie                                          17135   \n",
-       "F Bouwnijverheid                                                               30445   \n",
-       "G-I Handel, vervoer en horeca                                                 121860   \n",
-       "J Informatie en communicatie                                                   14685   \n",
-       "L Verhuur en handel van onroerend goed                                          8080   \n",
-       "M-N Zakelijke dienstverlening                                                  62295   \n",
+       "                                            Total  1 worker  2-10 workers  \\\n",
+       "Sector                                                                      \n",
+       "Business Economy, B-N, excl. K, incl. 95  1630865   1317745        256120   \n",
+       "B-E Nijverheid (geen bouw) en energie       91615     65650         17135   \n",
+       "F Bouwnijverheid                           270790    234820         30445   \n",
+       "G-I Handel, vervoer en horeca              446310    299380        121860   \n",
+       "J Informatie en communicatie               132900    114255         14685   \n",
+       "L Verhuur en handel van onroerend goed      39400     30605          8080   \n",
+       "M-N Zakelijke dienstverlening              640125    565010         62295   \n",
        "\n",
        "                                          10-50 workers  50-250 workers  \n",
        "Sector                                                                   \n",
@@ -578,7 +496,7 @@
        "M-N Zakelijke dienstverlening                      9965            2230  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
