size share for sector subpopulation

--- a/mkb_sizes.ipynb
+++ b/mkb_sizes.ipynb
@@ -535,6 +535,8 @@
     "\n",
     "\n",
     "df_BE = df.loc[df.index.isin(business_economy_sectors)]\n",
+    "\n",
+    "# CBS data on SME size\n",
     "df_BE"
    ]
   },
@@ -548,20 +550,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "id": "09900103",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# CBS data on SME age\n",
     "enterprise_age = {\"0-3\" : 348175,\n",
     "                  \"3-5\" : 261480,\n",
     "                  \"5-10\" : 389545,\n",
-    "                  \"10+\" : 618635}"
+    "                  \"10+\" : 618635}\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "id": "0132cb38",
    "metadata": {},
    "outputs": [
@@ -571,7 +574,7 @@
        "1617835"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -586,12 +589,79 @@
    "id": "edea41c0",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "size_categories = [\"micro\", \"small\", \"medium\"]\n",
+    "age_categories  = [\"young\", \"mature\", \"old\"]\n",
+    "\n",
+    "# Size per Sector\n",
+    "# Size Categories:\n",
+    "#   Micro: 0 - 10 workers\n",
+    "#   Small: 10 - 50 workers\n",
+    "#   Medium: 50 -250 workers\n",
+    "df_size = pd.DataFrame({\n",
+    "    \"Micro\": df_BE.iloc[:,1]+df_BE.iloc[:,2],\n",
+    "    \"Small\": df_BE.iloc[:,3],\n",
+    "    \"Medium\": df_BE.iloc[:,4]\n",
+    "}, index=df_BE.index)\n",
+    "\n",
+    "df_size.loc[\"Total per Size\"] = df_size.sum()\n",
+    "\n",
+    "# Age Categories:\n",
+    "#   Young: 0 - 5 years\n",
+    "#   Mature: 6 - 11 years\n",
+    "#   Old: > 10 years\n",
+    "sme_age = {\n",
+    "    \"young\":enterprise_age.get(\"0-3\",0)+enterprise_age.get(\"3-5\"),\n",
+    "    \"mature\": enterprise_age.get(\"5-10\",0),\n",
+    "    \"old\": enterprise_age.get(\"10+\",0)\n",
+    "    }\n",
+    "sectors = list(df_size.index)\n",
+    "\n",
+    "\n",
+    "# Compute Szie shares when a subset of sectors is selected\n",
+    "def compute_size_shares(df = df_size, sectors=sectors):\n",
+    "    if isinstance(sectors, str):\n",
+    "        sectors = [sectors]\n",
+    "    \n",
+    "    population_subset = df.loc[sectors]\n",
+    "    total_smes = population_subset.sum().sum()\n",
+    "    total_per_cat = population_subset.sum()\n",
+    "    size_shares = {\n",
+    "        cat: round(total_per_cat[cat]/total_smes,4)\n",
+    "        for cat in total_per_cat.index\n",
+    "    }\n",
+    "    return size_shares\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b800c189",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Micro': np.float64(0.9662),\n",
+       " 'Small': np.float64(0.0279),\n",
+       " 'Medium': np.float64(0.0059)}"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Size Shares when all sectors are selected\n",
+    "compute_size_shares(df_size,sectors)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -605,7 +675,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.13"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
