--- a/mkb_sizes.ipynb
+++ b/mkb_sizes.ipynb
@@ -615,7 +615,7 @@
     "    \"mature\": enterprise_age.get(\"5-10\",0),\n",
     "    \"old\": enterprise_age.get(\"10+\",0)\n",
     "    }\n",
-    "sectors = list(df_size.index)\n",
+    "sectors = list(df_size[1:].index)\n",
     "\n",
     "\n",
     "# Compute Szie shares when a subset of sectors is selected\n",
